Mon Mar 26 13:51:23 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (check_if_dir, check_if_wdir): fix for Visual C++
	  not to use S_ISDIR().  [Feature #2408][ruby-core:26925]

	* ruby.c (load_file_internal): ditto.

Mon Mar 26 11:46:01 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (load_file_internal): bail out if the script is a directory.
	  [Feature #2408][ruby-core:26925]

	* win32/win32.c (rb_w32_open, rb_w32_wopen): check if the file is a
	  directory when access denied, to set errno to EISDIR.

Sun Mar 25 18:13:14 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_setup_table): fix multiple non latin argument for
	  non latin (over 256 characters) tr-like methods.
	  [ruby-core:43371] [Bug #6167]

Sun Mar 25 00:46:06 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* enumerator (lazy_initialize): set the instance variable "receiver"
	  to include the receiver to the return value of inspect on a lazy
	  enumerator directly created by Enumerator::Lazy.new.

	* enumerator (RETURN_LAZY): don't set the instance variable "receiver".

Sat Mar 24 23:59:00 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* enumerator (enumerator_inspect): include the original receiver and
	  method name of Enumerator::Lazy in the result of inspect.
	  [ruby-core:43345] [Bug #6159]

	* enumerator (InitVM_Enumerator): don't use rb_define_alias for
	  some methods such as collect in order to make rb_frame_this_func()
	  return the correct method names.

Sat Mar 24 22:22:18 2012  Sambasiva Rao Suda  <sambasivarao@gmail.org>

	* time.c (time_init_1): Time.new will accept seconds as string or
	  int.  [ruby-core:43569][Bug #6193]

Fri Mar 23 15:12:12 2012  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* transcode.c (documentation for str_encode): Explain
	  that transcoding to the same encoding is a no-op
	  (i.e. no exceptions, no replacements,...).
	  [ruby-core:43557][Bug #6190]

Fri Mar 23 13:19:20 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
